fix) add padding bottom for the scrollbar

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 .list {
   list-style: none;
-  padding: 0;
+  padding: 0 0 24px;
   margin: 0;
 
   display: grid;
